--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
     <div id="game-container">
         <div class="color-container">
-            <p style="color:red">int</p>
+            <!-- <p style="color:red">int</p>
             <p style="color:blue">float</p>
             <p style="color:green">string</p>
-            <p style="color:yellow">bool</p>
+            <p style="color:yellow">bool</p> -->
+            <p>int</p>
+            <p>float</p>
+            <p>string</p>
+            <p>bool</p>
         </div>
         <div id="startScreen" style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); background-color:black; color:white; padding:20px; text-align:center;">
             Press Enter to start
